--- a/pset8/trivia/styles.css
+++ b/pset8/trivia/styles.css
@@ -37,7 +37,7 @@ h1 {
     font-size: 48px;
 }
 
-button, input[type="submit"] {
+button, input[type="button"] {
     background-color: #d9edff;
     border: 1px solid transparent;
     border-radius: 0.25rem;
