ddd, Oct 10/22/2022, YYYY, 3:27 A +0

--- a/pset8/homepage/styles.css
+++ b/pset8/homepage/styles.css
@@ -74,7 +74,7 @@ button{
     cursor: pointer;
 }
 .fa-facebook:hover,.fa-instagram:hover,.fa-twitter:hover,.fa-linkedin:hover, .fa-twitch:hover {
-    color: #008000;
+    color: #a1d7ff;
 }
 .fab {
     color: #000000;
