--- a/pset8/homepage/styles.css
+++ b/pset8/homepage/styles.css
@@ -32,6 +32,7 @@ nav ul li a:hover{
 section{
     padding-top: 100px;
     padding-bottom: 100px;
+    min-height: calc(100vh - 40px);
 }
 
 section h1{
@@ -56,6 +57,7 @@ button{
     justify-content: center;
     flex-direction: column;
     display: flex;
+
 }
 
 #hero .img-col{
