--- a/pset8/homepage/styles.css
+++ b/pset8/homepage/styles.css
@@ -34,6 +34,7 @@ nav ul li a:hover{
 section{
     padding-top: 100px;
     padding-bottom: 100px;
+    min-height: calc(100vh - 40px);
 }
 
 section h1{
