ddd, Oct 10/23/2022, YYYY, 12:03 A +0

--- a/pset8/homepage/styles.css
+++ b/pset8/homepage/styles.css
@@ -72,6 +72,9 @@ button{
     width: 115%;
 }
 
+/* Collapsible styling */
+.btn btn-link collapsed
+
 /* footer social media icons styling */
 .social-icons {
     font-size: 36px;
