--- a/pset8/homepage/styles.css
+++ b/pset8/homepage/styles.css
@@ -59,7 +59,6 @@ button{
     justify-content: center;
     flex-direction: column;
     display: flex;
-
 }
 
 #hero .img-col{
@@ -70,6 +69,12 @@ button{
 #hero img{
     max-width: 115%; !important;
     width: 115%;
+}
+
+#hero .accordion accordion-borderless{
+    justify-content: center;
+    flex-direction: column;
+    display: flex;
 }
 
 /* footer social media icons styling */
