ddd, Oct 10/23/2022, YYYY, 7:14 A +0

--- a/pset8/homepage/styles.css
+++ b/pset8/homepage/styles.css
@@ -71,6 +71,10 @@ button{
     width: 115%;
 }
 
+.accordion-button:after {
+    display: none;
+   }
+
 /* footer social media icons styling */
 .social-icons {
     font-size: 36px;
