ddd, Oct 10/23/2022, YYYY, 7:24 A +0

--- a/pset8/homepage/styles.css
+++ b/pset8/homepage/styles.css
@@ -71,6 +71,8 @@ button{
     width: 115%;
 }
 
+/* Styling for About Section */
+
 /* footer social media icons styling */
 .social-icons {
     font-size: 36px;
