ddd, Oct 10/23/2022, YYYY, 7:25 A +0

--- a/pset8/homepage/styles.css
+++ b/pset8/homepage/styles.css
@@ -72,6 +72,9 @@ button{
 }
 
 /* Styling for About Section */
+acc p{
+    font-size: 16px;
+    font-weight: 300;
 
 /* footer social media icons styling */
 .social-icons {
