ddd, Oct 10/23/2022, YYYY, 7:35 A +0

--- a/pset8/homepage/styles.css
+++ b/pset8/homepage/styles.css
@@ -71,7 +71,11 @@ button{
     width: 115%;
 }
 
-
+/* Styling for About Section */
+.accordion-header{
+    font-size: 16px;
+    font-weight: 300;
+}
 
 /* footer social media icons styling */
 .social-icons {
