--- a/pset9/lab9/birthdays/templates/index.html
+++ b/pset9/lab9/birthdays/templates/index.html
@@ -28,7 +28,18 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <!-- TODO: Loop through the database entries to display them in this table -->
+                        {% for registrant in registrants %}
+                        <tr>
+                            <td>{{ registrant["name"] }}</td>
+                            <td>{{ registrant["month"] }}/{{ registrant["day"] }}</td>
+                            <td>
+                                <form action="/delete" method="post">
+                                    <input name="id" type="hidden" value="{{ birthdays.id }}">
+                                    <input type="submit" value="Delete">
+                                </form>
+                            </td>
+                        </tr>
+                    {% endfor %}<
                     </tbody>
                 </table>
             </div>
