ddd, Oct 10/24/2022, YYYY, 2:03 A +0

--- a/pset9/lab9/birthdays/templates/index.html
+++ b/pset9/lab9/birthdays/templates/index.html
@@ -39,7 +39,7 @@
                                 </form>
                             </td>
                         </tr>
-                    {% endfor %}<
+                        {% endfor %}
                     </tbody>
                 </table>
             </div>
