ddd, Oct 10/24/2022, YYYY, 2:10 A +0

--- a/pset9/lab9/birthdays/templates/index.html
+++ b/pset9/lab9/birthdays/templates/index.html
@@ -28,10 +28,10 @@
                         </tr>
                     </thead>
                     <tbody>
-                        {% for birthday in birthdays %}
+                        {% for birthday in birthdaylist %}
                             <tr>
-                                <td>{{ birthdays["name"] }}</td>
-                                <td>{{ birthdays["month"] }}/{{ registrant["day"] }}</td>
+                                <td>{{ birthdaylist["name"] }}</td>
+                                <td>{{ birthdaylist["month"] }}/{{ birthdaylist["day"] }}</td>
                             </tr>
                         {% endfor %}
                     </tbody>
