--- a/pset9/lab9/birthdays/templates/index.html
+++ b/pset9/lab9/birthdays/templates/index.html
@@ -30,8 +30,8 @@
                     <tbody>
                         {% for birthday in birthdaylist %}
                             <tr>
-                                <td>{{ birthdaylist["name"] }}</td>
-                                <td>{{ birthdaylist["month"] }}/{{ birthdaylist["day"] }}</td>
+                                <td>{{ birthday["name"] }}</td>
+                                <td>{{ birthday["month"] }}/{{ birthday["day"] }}</td>
                             </tr>
                         {% endfor %}
                     </tbody>
