--- a/pset9/lab9/birthdays/templates/index.html
+++ b/pset9/lab9/birthdays/templates/index.html
@@ -15,6 +15,12 @@
 
                 <h2>Add a Birthday</h2>
                 <!-- TODO: Create a form for users to submit a name, a month, and a day -->
+                    <form action="/" method="post">
+                        <input autocomplete="off" autofocus name="name" placeholder="Name" type="text">
+                        <input name="day" placeholder="Day" type="text">
+                        <input name="month" placeholder="Month" type="text">
+                        <input type="submit" value="Add Birthday">
+                    </form>
             </div>
 
             <div class="section">
