--- a/pset9/lab9/birthdays/templates/index.html
+++ b/pset9/lab9/birthdays/templates/index.html
@@ -38,6 +38,12 @@
                             <tr>
                                 <td>{{ birthday["name"] }}</td>
                                 <td>{{ birthday["month"] }}/{{ birthday["day"] }}</td>
+                                <td>
+                                    <form action="/" method="post">
+                                        <input name="id" type="hidden" value="{{ birthdays.id }}">
+                                        <input type="submit" value="Delete">
+                                    </form>
+                                </td>
                             </tr>
                         {% endfor %}
                     </tbody>
