ddd, Oct 10/24/2022, YYYY, 2:34 A +0

--- a/pset9/lab9/birthdays/templates/index.html
+++ b/pset9/lab9/birthdays/templates/index.html
@@ -40,7 +40,7 @@
                                 <td>{{ birthday["month"] }}/{{ birthday["day"] }}</td>
                                 <td>
                                     <form action="/" method="post">
-                                        <input name="id" type="hidden" value="{{ birthday["id"] }}>
+                                        <input name="id" type="hidden" value="{{ birthday.id }}">
                                         <input type="submit" value="Delete">
                                     </form>
                                 </td>
