--- a/pset9/finance/templates/quoted.html
+++ b/pset9/finance/templates/quoted.html
@@ -1,9 +1,26 @@
 {% extends "layout.html" %}
 
 {% block title %}
-    Register
+    Quote
 {% endblock %}
 
 {% block main %}
-
+    <table>
+        <thead>
+            <tr>
+                <th>Symbol</th>
+                <th>Name</th>
+                <th>Stock</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for stock in quote %}
+                <tr>
+                    <td>{{ stock["symbol"] }}</td>
+                    <td>{{ stock["name"] }}</td>
+                    <td>{{ stock["price"] }}</td>
+                </tr>
+            {% endfor %}
+        </tbody>
+    </table>
 {% endblock %}
