ddd, Oct 10/24/2022, YYYY, 8:36 A +0

--- a/pset9/finance/templates/quoted.html
+++ b/pset9/finance/templates/quoted.html
@@ -14,13 +14,11 @@
             </tr>
         </thead>
         <tbody>
-            {% for stock in quote %}
                 <tr>
-                    <td>{{ stock["symbol"] }}</td>
-                    <td>{{ stock["name"] }}</td>
-                    <td>{{ stock["price"] }}</td>
+                    <td>{{ quote["symbol"] }}</td>
+                    <td>{{ quote["name"] }}</td>
+                    <td>{{ quote["price"] }}</td>
                 </tr>
-            {% endfor %}
         </tbody>
     </table>
 {% endblock %}
