--- a/pset9/finance/templates/quoted.html
+++ b/pset9/finance/templates/quoted.html
@@ -17,7 +17,7 @@
                 <tr>
                     <td>{{ quote["symbol"] }}</td>
                     <td>{{ quote["name"] }}</td>
-                    <td>{{ quote["price"] }}</td>
+                    <td>{{ quote["price"] | usd }}</td>
                 </tr>
         </tbody>
     </table>
