ddd, Oct 10/24/2022, YYYY, 9:35 A +0

--- a/pset9/finance/templates/buy.html
+++ b/pset9/finance/templates/buy.html
@@ -1,9 +1,9 @@
 {% extends "layout.html" %}
 
 {% block title %}
-    Buy
+    Buy Shares
 {% endblock %}
 
 {% block main %}
-    
+
 {% endblock %}
