--- a/pset9/finance/templates/buy.html
+++ b/pset9/finance/templates/buy.html
@@ -1,9 +1,20 @@
 {% extends "layout.html" %}
 
 {% block title %}
-    Buy Shares
+    Register
 {% endblock %}
 
 {% block main %}
-
+    <form action="/buy" method="post">
+        <div class="mb-3">
+            <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="symbol" name="symbol" placeholder="Symbol" type="text">
+        </div>
+        <div class="mb-3">
+            <input class="form-control mx-auto w-auto" id="shares" name="shares" placeholder="No. of Shares" type="password">
+        </div>
+        <div class="mb-3">
+            <input class="form-control mx-auto w-auto" id="password" name="confirmation" placeholder="Confirm Password" type="password">
+        </div>
+        <button class="btn btn-primary" type="submit">Register</button>
+    </form>
 {% endblock %}
