ddd, Oct 10/24/2022, YYYY, 9:38 A +0

--- a/pset9/finance/templates/buy.html
+++ b/pset9/finance/templates/buy.html
@@ -10,11 +10,8 @@
             <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="symbol" name="symbol" placeholder="Symbol" type="text">
         </div>
         <div class="mb-3">
-            <input class="form-control mx-auto w-auto" id="shares" name="shares" placeholder="No. of Shares" type="password">
+            <input class="form-control mx-auto w-auto" id="shares" name="shares" placeholder="No. of Shares" type="number">
         </div>
-        <div class="mb-3">
-            <input class="form-control mx-auto w-auto" id="password" name="confirmation" placeholder="Confirm Password" type="password">
-        </div>
-        <button class="btn btn-primary" type="submit">Register</button>
+        <button class="btn btn-primary" type="submit">Buy</button>
     </form>
 {% endblock %}
