ddd, Oct 10/25/2022, YYYY, 6:30 A +0

--- a/pset9/finance/templates/index.html
+++ b/pset9/finance/templates/index.html
@@ -8,8 +8,8 @@
     <table>
         <thead>
             <tr>
-                <th>Name</th>
-                <th>Birthday</th>
+                <th>Symbol</th>
+                <th>Quantity</th>
             </tr>
         </thead>
         <tbody>
