ddd, Oct 10/25/2022, YYYY, 6:50 A +0

--- a/pset9/finance/templates/index.html
+++ b/pset9/finance/templates/index.html
@@ -5,8 +5,8 @@
 {% endblock %}
 
 {% block main %}
-    <h3>Cash Balance: {{ birthday["name"] }}</h3>
-    <h3>Total Holdings: {{ birthday["name"] }}</h3>
+    <h3>Cash Balance:</h3>
+    <h3>Total Holdings: </h3>
     <table>
         <thead>
             <tr>
@@ -17,8 +17,8 @@
         </thead>
         <tbody>
                 <tr>
-                    <td>{{ birthday["name"] }}</td>
-                    <td>{{ birthday["month"] }}/{{ birthday["day"] }}</td>
+                    <td></td>
+                    <td></td>
                     <td></td>
                 </tr>
         </tbody>
