--- a/pset9/finance/templates/index.html
+++ b/pset9/finance/templates/index.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block main %}
-    <h3>Cash Balance:</h3>
+    <h3>Cash Balance:{{</h3>
     <h3>Total Holdings: </h3>
     <table>
         <thead>
