--- a/pset9/finance/templates/index.html
+++ b/pset9/finance/templates/index.html
@@ -5,8 +5,8 @@
 {% endblock %}
 
 {% block main %}
-    <h3>Cash Balance:{{</h3>
-    <h3>Total Holdings: </h3>
+    <h3>Cash Balance: {{ cash | usd }}</h3>
+    <h3>Total Holdings: {{ holdings | usd }}</h3>
     <table>
         <thead>
             <tr>
