--- a/pset9/finance/templates/index.html
+++ b/pset9/finance/templates/index.html
@@ -16,11 +16,13 @@
             </tr>
         </thead>
         <tbody>
+            {% for stock in stocks %}
                 <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td>{{ stock["symbol"]}}</td>
+                    <td>{{ stock["quantity"]}}</td>
+                    <td>{{ stock["value"]}}</td>
                 </tr>
+            {% endfor %}
         </tbody>
     </table>
 {% endblock %}
