ddd, Oct 10/25/2022, YYYY, 8:48 A +0

--- a/pset9/finance/templates/sell.html
+++ b/pset9/finance/templates/sell.html
@@ -10,7 +10,7 @@
         {% for symbol in symbols %}
             <option value="{{ symbol["symbol"] }}">{{ symbol["symbol"] }}</option>
         {% endfor %}
-        <input autocomplete="off" autofocus name="shares" placeholder="Amount" type="number">
+        <input autocomplete="off" autofocus name="shares" placeholder="Amount" type="text">
         <input type="submit" value="Sell">
     </form>
 {% endblock %}
