ddd, Oct 10/25/2022, YYYY, 8:55 A +0

--- a/pset9/finance/templates/sell.html
+++ b/pset9/finance/templates/sell.html
@@ -6,10 +6,11 @@
 
 {% block main %}
     <form action="/sell" method="post">
-        <option disabled selected value="">Stock</option>
-        {% for symbol in symbols %}
-            <option value="{{ symbol["symbol"] }}">{{ symbol["symbol"] }}</option>
-        {% endfor %}
+        <select name="shares">
+            {% for stock in stocks %}
+            <option value="{{ stock["symbol"] }}">{{ stock["symbol"] }}</option>
+            {% endfor %}
+        </select>
         <input autocomplete="off" autofocus name="shares" placeholder="Amount" type="text">
         <input type="submit" value="Sell">
     </form>
