ddd, Oct 10/25/2022, YYYY, 8:58 A +0

--- a/pset9/finance/templates/sell.html
+++ b/pset9/finance/templates/sell.html
@@ -7,7 +7,7 @@
 {% block main %}
     <form action="/sell" method="post">
         <select name="shares">
-            {% for stock in stocks %}
+            {% for stock in symbols %}
             <option value="{{ stock["symbol"] }}">{{ stock["symbol"] }}</option>
             {% endfor %}
         </select>
