ddd, Oct 10/25/2022, YYYY, 9:02 A +0

--- a/pset9/finance/templates/sell.html
+++ b/pset9/finance/templates/sell.html
@@ -6,7 +6,7 @@
 
 {% block main %}
     <form action="/sell" method="post">
-        <select name="shares">
+        <select name="symbol">
             {% for stock in symbols %}
             <option value="{{ stock["symbol"] }}">{{ stock["symbol"] }}</option>
             {% endfor %}
