--- a/pset9/finance/templates/index.html
+++ b/pset9/finance/templates/index.html
@@ -20,7 +20,7 @@
                 <tr>
                     <td>{{ stock["symbol"]}}</td>
                     <td>{{ stock["quantity"]}}</td>
-                    <td>{{ stock["value"]}}</td>
+                    <td>{{ stock["value"] | usd }}</td>
                 </tr>
             {% endfor %}
         </tbody>
