ddd, Oct 10/25/2022, YYYY, 1:27 A +0

--- a/pset9/finance/templates/sell.html
+++ b/pset9/finance/templates/sell.html
@@ -12,6 +12,6 @@
             {% endfor %}
         </select>
         <input autocomplete="off" autofocus name="shares" placeholder="Amount" type="text">
-        <input type="submit" value="Sell">
+        <button class="btn btn-primary" type="submit">Submit</button>
     </form>
 {% endblock %}
