--- a/pset9/finance/templates/buy.html
+++ b/pset9/finance/templates/buy.html
@@ -10,7 +10,7 @@
             <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="symbol" name="symbol" placeholder="Symbol" type="text">
         </div>
         <div class="mb-3">
-            <input class="form-control mx-auto w-auto" id="shares" name="shares" placeholder="No. of Shares" type="number">
+            <input class="form-control mx-auto w-auto" id="shares" name="shares" placeholder="No. of Shares" type="text">
         </div>
         <button class="btn btn-primary" type="submit">Buy</button>
     </form>
