ddd, Oct 10/25/2022, YYYY, 7:29 A +0

--- a/final/templates/index.html
+++ b/final/templates/index.html
@@ -1,10 +1,9 @@
 {% extends "layout.html" %}
 
 {% block title %}
-    Grade Calculator
+    Choose your course
 {% endblock %}
 
 {% block main %}
-
-kdafajkfl
+    
 {% endblock %}
