ddd, Oct 10/25/2022, YYYY, 7:36 A +0

--- a/final/templates/index.html
+++ b/final/templates/index.html
@@ -5,5 +5,5 @@
 {% endblock %}
 
 {% block main %}
-    <a href="https://www.w3docs.com/" class="button">Click Here</a>
+    <a href="templates/extcert.html" class="button">Click Here</a>
 {% endblock %}
