--- a/final/templates/index.html
+++ b/final/templates/index.html
@@ -5,5 +5,7 @@
 {% endblock %}
 
 {% block main %}
-    <a href="extcert.html" class="button">Extended Certificate</a>
+    <a class="button" href="extcert.html">Extended Certificate</a>
+    <a class="button" href="dip.html">Diploma</a>
+    <a class="button" href="extdip.html">Extended Diploma</a>
 {% endblock %}
