--- a/final/templates/index.html
+++ b/final/templates/index.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block main %}
-    <a class="button" href="extcert.html">Extended Certificate</a>
-    <a class="button" href="dip.html">Diploma</a>
-    <a class="button" href="extdip.html">Extended Diploma</a>
+    <a class="button" href="/extcert">Extended Certificate</a>
+    <a class="button" href="/dip">Diploma</a>
+    <a class="button" href="/extdip">Extended Diploma</a>
 {% endblock %}
