ddd, Oct 10/25/2022, YYYY, 7:54 A +0

--- a/final/templates/extcert.html
+++ b/final/templates/extcert.html
@@ -5,5 +5,9 @@
 {% endblock %}
 
 {% block main %}
-    
+    <select name="symbol">
+        {% for unit in units %}
+        <option value="{{ unit["id"] }}">{{ unit["id"] }}.{{ unit["name"] }}</option>
+        {% endfor %}
+    </select>
 {% endblock %}
