ddd, Oct 10/25/2022, YYYY, 7:55 A +0

--- a/final/templates/extcert.html
+++ b/final/templates/extcert.html
@@ -5,7 +5,12 @@
 {% endblock %}
 
 {% block main %}
-    <select name="symbol">
+    <select name="unit">
+        {% for unit in units %}
+        <option value="{{ unit["id"] }}">{{ unit["id"] }}.{{ unit["name"] }}</option>
+        {% endfor %}
+    </select>
+    <select name="grade">
         {% for unit in units %}
         <option value="{{ unit["id"] }}">{{ unit["id"] }}.{{ unit["name"] }}</option>
         {% endfor %}
