--- a/final/templates/extcert.html
+++ b/final/templates/extcert.html
@@ -6,7 +6,7 @@
 
 {% block main %}
     <h1 class="text-center text-muted">Select Course</h1>
-    <select name="courses">
+    <select name="courses", class="form-control", id="all_courses">
         {% for unit in units %}
         <option value="{{ unit["id"] }}">{{ unit["id"] }}.{{ unit["name"] }}</option>
         {% endfor %}
@@ -22,7 +22,7 @@
             {% for transaction in transactions %}
                 <tr>
                     <td>
-                        <select name="grade">
+                        <select name="units", class="form-control", id="all_units">
                         {% for unit in units %}
                         <option value="{{ unit["id"] }}">{{ unit["id"] }}.{{ unit["name"] }}</option>
                         {% endfor %}
@@ -30,9 +30,7 @@
                     </td>
                     <td>
                         <select name="grade">
-                        {% for unit in units %}
                         <option value="{{ unit["id"] }}">{{ unit["id"] }}.{{ unit["name"] }}</option>
-                        {% endfor %}
                         </select>
                     </td>
                 </tr>
