ddd, Oct 10/25/2022, YYYY, 10:23 A +0

--- a/final/templates/extcert.html
+++ b/final/templates/extcert.html
@@ -30,7 +30,9 @@
                     </td>
                     <td>
                         <select name="grade">
-                        <option value="{{ unit["id"] }}">{{ unit["id"] }}.{{ unit["name"] }}</option>
+                        <option value="D}">Distinction</option>
+                        <option value="D}">Merit</option>
+                        <option value="D}">Pass</option>
                         </select>
                     </td>
                 </tr>
