ddd, Oct 10/25/2022, YYYY, 10:24 A +0

--- a/final/static/styles.css
+++ b/final/static/styles.css
@@ -9,3 +9,19 @@
     font-size: 20px;
     margin: 4px 2px;
     cursor: pointer;
+
+table {
+    background-color: transparent;
+    margin-bottom: 1rem;
+    width: 100%;
+}
+
+table th,
+table td {
+    padding: 0.75rem;
+    vertical-align: middle;
+}
+
+tbody tr:nth-of-type(odd) {
+    background-color: rgb(179, 208, 255, 0.3)
+}
