ddd, Oct 10/25/2022, YYYY, 10:28 A +0

--- a/final/templates/extcert.html
+++ b/final/templates/extcert.html
@@ -30,9 +30,9 @@
                     </td>
                     <td>
                         <select name="grade">
-                        <option value="D}">Distinction</option>
-                        <option value="D}">Merit</option>
-                        <option value="D}">Pass</option>
+                        <option value="D">Distinction</option>
+                        <option value="M">Merit</option>
+                        <option value="P">Pass</option>
                         </select>
                     </td>
                 </tr>
