ddd, Oct 10/25/2022, YYYY, 10:39 A +0

--- a/final/templates/extcert.html
+++ b/final/templates/extcert.html
@@ -37,4 +37,7 @@
                 </tr>
         </tbody>
     </table>
+    <div>
+        <button type="button" id="process_input">Submit</button>
+    </div>
 {% endblock %}
