--- a/final/templates/extcert.html
+++ b/final/templates/extcert.html
@@ -40,4 +40,33 @@
     <div>
         <button type="button" id="process_input">Submit</button>
     </div>
+    <script src="https://code.jquery.com/jquery-1.12.4.js" type="text/javascript"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script type="text/javascript">
+      $(document).ready(function() {
+
+        $('#all_courses').change(function(){
+
+          $.getJSON('/_update_dropdown', {
+            selected_class: $('#all_courses').val()
+
+          }).success(function(data) {
+                $('#all_units').html(data.html_string_selected);
+           })
+        });
+        $('#process_input').bind('click', function() {
+
+            $.getJSON('/_process_data', {
+                selected_class: $('#all_classes').val(),
+                selected_entry: $('#all_entries').val(),
+
+
+            }).success(function(data) {
+                $('#processed_results').text(data.random_text);
+            })
+          return false;
+
+        });
+      });
+    </script>
 {% endblock %}
