ddd, Oct 10/25/2022, YYYY, 10:55 A +0

--- a/final/templates/extcert.html
+++ b/final/templates/extcert.html
@@ -28,7 +28,7 @@
                         </select>
                     </td>
                     <td>
-                        <select name="grade">
+                        <select name="units", class="form-control", id="all_units">
                         <option value="D">Distinction</option>
                         <option value="M">Merit</option>
                         <option value="P">Pass</option>
