--- a/final/templates/extcert.html
+++ b/final/templates/extcert.html
@@ -99,7 +99,7 @@
             selected_class: $('#all_courses').val()
 
           }).success(function(data) {
-                $('#all_units').html(data.html_string_selected);
+                $('#unit1').html(data.html_string_selected);
            })
         });
         $('#process_input').bind('click', function() {
