--- a/final/templates/extcert.html
+++ b/final/templates/extcert.html
@@ -96,7 +96,7 @@
         $('#all_courses').change(function(){
 
           $.getJSON('/_update_dropdown', {
-            selected_class: $('#all_courses').val()
+            selected_course: $('#all_courses').val()
 
           }).success(function(data) {
                 $('#unit1').html(data.html_string_selected);
