--- a/final/templates/extcert.html
+++ b/final/templates/extcert.html
@@ -21,7 +21,7 @@
         <tbody>
                 <tr>
                     <td>
-                        <select name="units", class="form-control", id="all_units">
+                        <select name="units", class="all_units", id="unit1">
                         {% for unit in all_units %}
                         <option value="{{ unit["id"] }}">{{ unit["id"] }}.{{ unit["name"] }}</option>
                         {% endfor %}
@@ -37,7 +37,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <select name="units", class="form-control", id="all_units">
+                        <select name="units", class="all_units", id="unit2">
                         {% for unit in all_units %}
                         <option value="{{ unit["id"] }}">{{ unit["id"] }}.{{ unit["name"] }}</option>
                         {% endfor %}
@@ -53,7 +53,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <select name="units", class="form-control", id="all_units>
+                        <select name="units", class="all_units", id="unit3">
                         {% for unit in all_units %}
                         <option value="{{ unit["id"] }}">{{ unit["id"] }}.{{ unit["name"] }}</option>
                         {% endfor %}
@@ -69,7 +69,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <select name="units", class="form-control", id="all_units>
+                        <select name="units", class="all_units", id="unit4">
                         {% for unit in all_units %}
                         <option value="{{ unit["id"] }}">{{ unit["id"] }}.{{ unit["name"] }}</option>
                         {% endfor %}
@@ -99,7 +99,7 @@
             selected_course: $('#all_courses').val()
 
           }).success(function(data) {
-                $('#all_units').html(data.html_string_selected);
+                $('.all_units').html(data.html_string_selected);
            })
         });
         $('#process_input').bind('click', function() {
