ddd, Oct 10/26/2022, YYYY, 12:15 A +0

--- a/final/templates/extcert.html
+++ b/final/templates/extcert.html
@@ -106,7 +106,8 @@
 
             $.getJSON('/_process_data', {
                 selected_class: $('#all_courses').val(),
-                selected_entry: $('#all_units').val(),
+                selected_entry: $('#unit1').val(),
+                selected_entry: $('#grade1').val(),
             })
           return false;
 
