--- a/final/templates/extcert.html
+++ b/final/templates/extcert.html
@@ -106,8 +106,8 @@
 
             $.getJSON('/_process_data', {
                 selected_class: $('#all_courses').val(),
-                selected_entry: $('#unit1').val(),
-                selected_entry: $('#grade1').val(),
+                unit1: $('#unit1').val(),
+                grade1: $('#grade1').val(),
             })
           return false;
 
