--- a/final/templates/extcert.html
+++ b/final/templates/extcert.html
@@ -108,6 +108,8 @@
                 selected_class: $('#all_courses').val(),
                 unit1: $('#unit1').val(),
                 grade1: $('#grade1').val(),
+                unit2: $('#unit1').val(),
+                grade2: $('#grade1').val(),
             })
           return false;
 
