ddd, Oct 10/26/2022, YYYY, 12:23 A +0

--- a/final/templates/extcert.html
+++ b/final/templates/extcert.html
@@ -37,7 +37,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <select name="units", class="all_units", id="unit2">
+                        <select name="units", class="form-control", id="unit2">
                         {% for unit in all_units %}
                         <option value="{{ unit["id"] }}">{{ unit["id"] }}.{{ unit["name"] }}</option>
                         {% endfor %}
