--- a/final/templates/extcert.html
+++ b/final/templates/extcert.html
@@ -21,7 +21,7 @@
         <tbody>
                 <tr>
                     <td>
-                        <select name="units", class="all_units", id="unit1">
+                        <select name="units", class="form-control all_units", id="unit1">
                         {% for unit in all_units %}
                         <option value="{{ unit["id"] }}">{{ unit["id"] }}.{{ unit["name"] }}</option>
                         {% endfor %}
@@ -37,7 +37,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <select name="units", class="form-control", id="unit2">
+                        <select name="units", class="form-control all_units", id="unit2">
                         {% for unit in all_units %}
                         <option value="{{ unit["id"] }}">{{ unit["id"] }}.{{ unit["name"] }}</option>
                         {% endfor %}
@@ -53,7 +53,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <select name="units", class="all_units", id="unit3">
+                        <select name="units", class="form-control all_units", id="unit3">
                         {% for unit in all_units %}
                         <option value="{{ unit["id"] }}">{{ unit["id"] }}.{{ unit["name"] }}</option>
                         {% endfor %}
@@ -69,7 +69,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <select name="units", class="all_units", id="unit4">
+                        <select name="units", class="form-control all_units", id="unit4">
                         {% for unit in all_units %}
                         <option value="{{ unit["id"] }}">{{ unit["id"] }}.{{ unit["name"] }}</option>
                         {% endfor %}
@@ -108,8 +108,12 @@
                 selected_class: $('#all_courses').val(),
                 unit1: $('#unit1').val(),
                 grade1: $('#grade1').val(),
-                unit2: $('#unit1').val(),
-                grade2: $('#grade1').val(),
+                unit2: $('#unit2').val(),
+                grade2: $('#grade2').val(),
+                unit3: $('#unit3').val(),
+                grade3: $('#grade3').val(),
+                unit4: $('#unit4').val(),
+                grade4: $('#grade4').val(),
             })
           return false;
 
