ddd, Oct 10/26/2022, YYYY, 3:34 A +0

--- a/final/templates/extcert.html
+++ b/final/templates/extcert.html
@@ -106,7 +106,7 @@
 
             $.getJSON('/_process_data', {
                 selected_class: $('#all_courses').val(),
-                unit1: $('#unit1').val(),
+                $('#unit1').val(): $('#grade1').val(),
                 grade1: $('#grade1').val(),
                 unit2: $('#unit2').val(),
                 grade2: $('#grade2').val(),
