ddd, Oct 10/26/2022, YYYY, 3:35 A +0

--- a/final/templates/extcert.html
+++ b/final/templates/extcert.html
@@ -107,13 +107,8 @@
             $.getJSON('/_process_data', {
                 selected_class: $('#all_courses').val(),
                 $('#unit1').val(): $('#grade1').val(),
-                grade1: $('#grade1').val(),
-                unit2: $('#unit2').val(),
-                grade2: $('#grade2').val(),
-                unit3: $('#unit3').val(),
-                grade3: $('#grade3').val(),
-                unit4: $('#unit4').val(),
-                grade4: $('#grade4').val(),
+                $('#unit2').val(): $('#grade2').val(),
+                $('#unit2').val(): $('#grade2').val(),
             })
           return false;
 
