ddd, Oct 10/26/2022, YYYY, 3:38 A +0

--- a/final/templates/extcert.html
+++ b/final/templates/extcert.html
@@ -99,7 +99,7 @@
             selected_course: $('#all_courses').val()
 
           }).success(function(data) {
-                $('.all_units').html(data.html_string_selected);
+                $('.form-control all_units').html(data.html_string_selected);
            })
         });
         $('#process_input').bind('click', function() {
