--- a/final/templates/extcert.html
+++ b/final/templates/extcert.html
@@ -105,9 +105,11 @@
         $('#process_input').bind('click', function() {
 
             $.getJSON('/_process_data', {
-                selected_class: $('.all_courses').val(),
-                $('#unit1').val(): $('#grade1').val(),
-                $('#unit1').val(): $('#grade1').val(),
+                selected_class: $('#all_courses').val(),
+                $('#unit1').val(),
+                grade1: $('#grade1').val(),
+                unit2: $('#unit1').val(),
+                grade2: $('#grade1').val(),
             })
           return false;
 
