--- a/final/templates/extcert.html
+++ b/final/templates/extcert.html
@@ -106,8 +106,7 @@
 
             $.getJSON('/_process_data', {
                 selected_class: $('#all_courses').val(),
-                $('#unit1').val(),
-                grade1: $('#grade1').val(),
+                $('#unit1').val(): $('#grade1').val(),
                 unit2: $('#unit1').val(),
                 grade2: $('#grade1').val(),
             })
