--- a/final/templates/extcert.html
+++ b/final/templates/extcert.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block main %}
-    <h1 class="text-center text-muted">Select Course</h1>
+    <h1 class="text-center text-muted" id="stream">Extended Certificate</h1>
     <select name="courses", class="form-control", id="all_courses">
         {% for course in all_courses %}
         <option value="{{ course }}">{{ course }}</option>
@@ -114,6 +114,7 @@
                 grade2: $('#grade3').val(),
                 unit2: $('#unit4').val(),
                 grade2: $('#grade4').val(),
+                stream: $('#stream').val(),
             })
           return false;
 
