ddd, Oct 10/26/2022, YYYY, 4:07 A +0

--- a/final/templates/extcert.html
+++ b/final/templates/extcert.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block main %}
-    <h1 class="text-center text-muted" id="stream" value="extcert">Extended Certificate</h1>
+    <h1 class="text-center text-muted">Select Course</h1>
     <select name="courses", class="form-control", id="all_courses">
         {% for course in all_courses %}
         <option value="{{ course }}">{{ course }}</option>
@@ -114,7 +114,6 @@
                 grade3: $('#grade3').val(),
                 unit4: $('#unit4').val(),
                 grade4: $('#grade4').val(),
-                stream: $('#stream').val(),
             })
           return false;
 
