--- a/final/templates/dip.html
+++ b/final/templates/dip.html
@@ -106,7 +106,7 @@
 
             $.getJSON('/_process_data', {
                 selected_class: $('#all_courses').val(),
-                stream: 'extcert',
+                stream: 'dip',
                 unit1: $('#unit1').val(),
                 grade1: $('#grade1').val(),
                 unit2: $('#unit2').val(),
