--- a/final/templates/dip.html
+++ b/final/templates/dip.html
@@ -83,6 +83,38 @@
                         </select>
                     </td>
                 </tr>
+                <tr>
+                    <td>
+                        <select name="units", class="form-control all_units", id="unit5">
+                        {% for unit in all_units %}
+                        <option value="{{ unit["id"] }}">{{ unit["id"] }}.{{ unit["name"] }}</option>
+                        {% endfor %}
+                        </select>
+                    </td>
+                    <td>
+                        <select name="units", class="form-control", id="grade5">
+                        <option value="D">Distinction</option>
+                        <option value="M">Merit</option>
+                        <option value="P">Pass</option>
+                        </select>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <select name="units", class="form-control all_units", id="unit6">
+                        {% for unit in all_units %}
+                        <option value="{{ unit["id"] }}">{{ unit["id"] }}.{{ unit["name"] }}</option>
+                        {% endfor %}
+                        </select>
+                    </td>
+                    <td>
+                        <select name="units", class="form-control", id="grade6">
+                        <option value="D">Distinction</option>
+                        <option value="M">Merit</option>
+                        <option value="P">Pass</option>
+                        </select>
+                    </td>
+                </tr>
         </tbody>
     </table>
     <div>
@@ -111,10 +143,14 @@
                 grade1: $('#grade1').val(),
                 unit2: $('#unit2').val(),
                 grade2: $('#grade2').val(),
-                unit2: $('#unit3').val(),
-                grade2: $('#grade3').val(),
-                unit2: $('#unit4').val(),
-                grade2: $('#grade4').val(),
+                unit3: $('#unit3').val(),
+                grade3: $('#grade3').val(),
+                unit4: $('#unit4').val(),
+                grade4: $('#grade4').val(),
+                unit5: $('#unit5').val(),
+                grade5: $('#grade5').val(),
+                unit6: $('#unit6').val(),
+                grade6: $('#grade6').val(),
             })
         return false;
 
